# CSV-Merger-Cleaner-Luca-Gozzi-

./: .gitignore  AI_USAGE.md  LICENSE  PROPOSAL.md  README.md  check_class_balance.py  project_report_template.md  pyproject.toml  requirements.txt
data/: __init__.py
data/processed/: split_info.txt
models/: logistic_regression.pkl  xgboost.pkl
results/: ensemble_comparison.csv  model_comparison.csv  model_comparison_default_threshold.csv  model_comparison_test.csv  model_comparison_validation.csv  optimal_thresholds.csv  pipeline_report.txt  threshold_analysis_logistic_regression.csv  threshold_analysis_random_forest.csv  threshold_analysis_xgboost.csv
scripts/: test_evaluation.py  test_feature_engineering.py  test_predictor.py  test_preprocessing.py  test_splitting.py  test_training.py
src/: config.py  environment.yml  main.py
src/data/: __init__.py  loader.py  preprocessor.py  validator.py
src/features/: __init__.py  engineer.py  selector.py
src/ml/: __init__.py  ensemble.py  evaluator.py  predictor.py  splitter.py  trainer.py
tests/: conftest.py  test_ensemble.py  test_evaluator.py  test_features.py  test_loader.py  test_main.py  test_predictor.py  test_preprocessor.py  test_selector.py  test_splitter.py  test_trainer.py  test_validator.py
